--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+     "mongoose": "^7.7.1",
     "dotenv": "^16.3.1" ,
     "cors": "^2.8.5",
     "multer": "^1.4.5-lts.1"
