--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,10 @@
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+  "node": "18.x",
+  "npm": "9.x"
+},
   "scripts": {
   "start": "react-scripts start",
   "build": "react-scripts build",
